--- a/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -30,4 +30,14 @@
 <div class="row">
   <div class="col-xs-12">{{ recipe.description }}</div>
 </div>
-<div class="row"><div class="col-xs-12">Ingredients</div></div>
+<div class="row">
+  <div class="col-xs-12">
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+        {{ ingredient.name }}
+        -
+        {{ ingredient.amount }}
+      </li>
+    </ul>
+  </div>
+</div>
