--- a/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -25,8 +25,10 @@
             >Shopping List</a
           >
         </li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
+        <li style="cursor: pointer">
+          <a (click)="onEditRecipe()">Edit Recipe</a>
+        </li>
+        <li style="cursor: pointer"><a>Delete Recipe</a></li>
       </ul>
     </div>
   </div>
